kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-server
  labels:
    app: echo-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - name: echo-server
        image: zackbutcher/echo-server:v0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        args:
        - --server-port=80
