kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  labels:
    app: echo-server
    version: v1
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  selector:
    app: echo-server
